--- a/package.json
+++ b/package.json
@@ -1,22 +1,26 @@
 {
-  "name": "hr-atm",
+  "name": "hr-currency-converter",
   "version": "1.0.0",
-  "description": "A simple atm using typescript and Node Js.",
+  "description": "A simple currency converter App using Typescript and Node Js.",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [
-    "ATM"
-  ],
-  "author": "Haris",
-  "license": "ISC",
-  "devDependencies": {
-    "typescript": "^4.9.4"
+    "start": "snowpack dev",
+    "build": "snowpack build",
+    "test": "echo \"This template does not include a test runner by default.\" && exit 1",
+    "format": "prettier --write \"src/**/*.{ts,js}\"",
+    "lint": "prettier --check \"src/**/*.{ts,js}\""
   },
   "dependencies": {
-    "@types/readline-sync": "^1.4.4",
-    "readline-sync": "^1.4.10"
+    "@types/bootstrap": "^5.2.6",
+    "canvas-confetti": "^1.2.0"
+  },
+  "devDependencies": {
+    "@snowpack/plugin-typescript": "^1.2.1",
+    "@types/canvas-confetti": "^1.0.0",
+    "@types/jquery": "^3.5.14",
+    "@types/snowpack-env": "^2.3.3",
+    "prettier": "^2.2.1",
+    "snowpack": "^3.3.7",
+    "typescript": "^4.2.4"
   }
 }
