--- a/package.json
+++ b/package.json
@@ -1,26 +1,23 @@
 {
-  "name": "hr-currency-converter",
+  "name": "todo-list",
   "version": "1.0.0",
-  "description": "A simple currency converter App using Typescript and Node Js.",
+  "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "snowpack dev",
-    "build": "snowpack build",
-    "test": "echo \"This template does not include a test runner by default.\" && exit 1",
-    "format": "prettier --write \"src/**/*.{ts,js}\"",
-    "lint": "prettier --check \"src/**/*.{ts,js}\""
+    "start": "tsc --watch",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "devDependencies": {
+    "@types/bootstrap": "^5.2.6",
+    "@types/jquery": "^3.5.14",
+    "jquery": "^3.6.2",
+    "typescript": "^4.9.4"
   },
   "dependencies": {
-    "@types/bootstrap": "^5.2.6",
-    "canvas-confetti": "^1.2.0"
-  },
-  "devDependencies": {
-    "@snowpack/plugin-typescript": "^1.2.1",
-    "@types/canvas-confetti": "^1.0.0",
-    "@types/jquery": "^3.5.14",
-    "@types/snowpack-env": "^2.3.3",
-    "prettier": "^2.2.1",
-    "snowpack": "^3.3.7",
-    "typescript": "^4.2.4"
+    "@types/uuid": "^9.0.0",
+    "uuid": "^9.0.0"
   }
 }
