--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
-  "name": "todo-list",
+  "name": "hr-todo-list",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "tsc --watch",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "tsc --watch"
   },
   "keywords": [],
   "author": "",
