--- a/package.json
+++ b/package.json
@@ -1,20 +1,23 @@
 {
-  "name": "hr-school-managemet-system",
+  "name": "hr-word-counter",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node build/index.js"
+    "start": "tsc --watch"
   },
   "type": "module",
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/bootstrap": "^5.2.6",
+    "@types/jquery": "^3.5.14",
+    "jquery": "^3.6.2",
     "typescript": "^4.9.4"
   },
   "dependencies": {
-    "@types/readline-sync": "^1.4.4",
-    "readline-sync": "^1.4.10"
+    "@types/uuid": "^9.0.0",
+    "uuid": "^9.0.0"
   }
 }
