--- a/package.json
+++ b/package.json
@@ -1,20 +1,24 @@
 {
-  "name": "adventure_game",
+  "name": "hr-quiz-app",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "type": "module",
   "scripts": {
+    "start": "tsc --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "type": "module",
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/node": "^18.11.18"
+    "@types/bootstrap": "^5.2.6",
+    "@types/jquery": "^3.5.14",
+    "jquery": "^3.6.2",
+    "typescript": "^4.9.4"
   },
   "dependencies": {
-    "@types/readline-sync": "^1.4.4",
-    "readline-sync": "^1.4.10"
+    "@types/uuid": "^9.0.0",
+    "uuid": "^9.0.0"
   }
 }
